# 64k-starter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
src/: critical.rs  gl.rs  main.rs  shader.frag  time.rs
