[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[build-dependencies]
walkdir = "2.3.3"
reqwest = { version = "0.11.18", features = ["blocking"] }

[dependencies.critical-section]
version = "1.1.2"

[dependencies.libc_alloc]
version = "1.0.5"

[dependencies.once_cell]
version = "1.18.0"
default-features = false
features = [
    "critical-section"
]

[dependencies.wavesabre-rs]
git = "https://github.com/Kwarf/wavesabre-rs.git"

[dependencies.windows-sys]
version = "0.48.0"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
